--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@react-pdf/renderer": "^3.1.12",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -29,6 +30,10 @@
     "crypto-js": "^4.1.1",
     "i18next": "^23.4.4",
     "i18next-browser-languagedetector": "^7.1.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
+    "pdf-lib": "^1.17.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-confirm": "^0.2.4",
     "react-cookie": "^4.1.1",
@@ -38,6 +43,7 @@
     "react-i18next": "^13.1.2",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.0.4",
+    "react-pdf": "^7.3.3",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
@@ -48,10 +54,12 @@
     "rsuite": "^5.38.0",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/pdfmake": "^0.2.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
